# ISLAND

./: .clang-format  .gitignore  ISLAND_SYSTEM_REFERENCE.md  MyProject.uproject  QUICK_START.md  README.md  RFSN_BLUEPRINT_GUIDE.md  SETUP_INSTRUCTIONS.md  launch_game.sh  setup_environment.sh
Config/: ConsoleVariables_HighFidelity.ini  ConsoleVariables_LowMemory.ini  (+3 more)
RFSN_NPC_AI/Python/: chatterbox_server.py  latency_optimizations.py  memory_consolidator.py  memory_governance.py  memory_manager.py  mock_server.py  multi_npc.py  orchestrator.py  pyproject.toml  security.py  streaming_pipeline.py  structured_logging.py
RFSN_NPC_AI/Python/data/audit/: state_audit.jsonl
RFSN_NPC_AI/Python/data/recordings/: recording_0d4617aefe32d857.jsonl  recording_215dde85b4c16459.json  recording_215dde85b4c16459.jsonl  recording_2bf2e6e8e298f107.jsonl  recording_3228371c1ed4078c.json  recording_3228371c1ed4078c.jsonl  recording_60df30a717fbf8c1.json  recording_60df30a717fbf8c1.jsonl  recording_6618380f9cf09fda.jsonl  recording_6c3ab6b20aeb3f34.jsonl  recording_7aa51b2b88c72f4e.jsonl  recording_7dfa80960d358ed1.json  recording_7dfa80960d358ed1.jsonl  recording_833660b3a75c3044.jsonl  recording_8a4bafab8eb08dc5.jsonl  recording_b152902bc1237b3c.jsonl  recording_cc827a4ac9d33715.jsonl  recording_d4c3609768d64478.jsonl  recording_faaa385a635b5b78.json  recording_faaa385a635b5b78.jsonl  recording_test_session.json  recording_test_session.jsonl
RFSN_NPC_AI/Python/learning/: learning_contract.py  schemas.py
RFSN_NPC_AI/Python/tests/: test_operational.py  test_production.py
(+147 files in other folders)
