[project]
name = "rfsn-orchestrator"
version = "0.1.0"
description = "RFSN GenAI Orchestrator for NPC AI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.3",
    "python-multipart>=0.0.6",
    
    # JWT
    "PyJWT>=2.8.0",
    
    # HTTP requests
    "requests>=2.31.0",
    "tqdm>=4.66.1",
    
    # Testing
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "httpx>=0.26.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "aiofiles>=23.2.1",
    
    # Learning Layer
    "numpy>=1.24",
    
    # TTS (Kokoro-ONNX)
    "kokoro-onnx>=0.4.9",
    "scipy",
    "soundfile>=0.13.1",
    
    # Semantic Memory
    "sentence-transformers>=2.2.2",
    "scikit-learn>=1.3.0",
]
